Fixed jumping margin when open note thread

--- a/app/assets/stylesheets/src/shared/_profile.scss
+++ b/app/assets/stylesheets/src/shared/_profile.scss
@@ -87,12 +87,8 @@
   .list-group-item.note {
     padding: 0 ;
     border: 0;
+    margin-top: 0.5rem;
   }
-
-  .collapse .note {
-    padding-top: 0.5rem;
-  }
-
 }
 
 .profile-avatar-overlay {
